<resources>
    <string name="app_name">YourApp</string>
    <string name="logo">Logo</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="default_web_client_id">688232360190-el8tmoe5vf2qd40o86k96stok9nm7v1r.apps.googleusercontent.com</string>
    <string name="sign_up_title">Sign Up</string>
</resources>
